<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/user_name_et"
        android:hint="@string/signup_username"
        android:textSize="@dimen/signup_tv_size"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/account_et"
        android:hint="@string/signup_account"
        android:textSize="@dimen/signup_tv_size"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/password_et"
        android:hint="@string/signup_password"
        android:textSize="@dimen/signup_tv_size"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/signup_btn"
        android:text="@string/signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>