<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/ToolbarStyle">
        <TextView
            android:id="@+id/toolbar_title"
            style="@style/titlebar_tv_style"
            android:text="@string/find_friends"
            android:layout_gravity="center"
            />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:hint="@string/plz_input_username_to_find"
        android:id="@+id/findfriends_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <Button
            android:id="@+id/find_btn"
            android:text="@string/find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/findfriends_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>